# get-papers-list

./: README.md  cli.py  pyproject.toml
get-papers-list/: README.md  pyproject.toml
get-papers-list/get_papers_list/: cli.py  core.py
get_papers_list/: fetch_papers.py  filter_papers.py  utils.py
paper/: get_papers_list.py  output.csv  test.csv
