[tool.poetry]
name = "get-papers-list"
version = "0.1.0"
description = "A Python program to fetch and filter research papers from PubMed."
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "get_papers_list" }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
pandas = "^1.3.3"

[tool.poetry.scripts]
get-papers-list = "get_papers_list.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"